2000-10-30  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lisp/ptexinfmt.el (ptexinfmt-disable-broken-notice-flag): Renamed
	from `ptexinfmt-disable-broken-notice'.

2000-10-27  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lisp/ptexinfmt.el (texinfo-format-printindex): Mule for Windows
	detection fixed.

2000-10-26  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-group-startup-message): Rewrite for Emacs 21.
	* lisp/lpath.el: Fbind `propertize'.

2000-10-22  Katsuhiro Hermit Endo <hermit@tomato.saino.ne.jp>

	* texi/gnus-ja.texi (Changing Servers): Fix typo.

2000-10-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-netbsd-get-headers): Fix regular
	expression to extract xover urls.

2000-10-12  Jesper Harder <jesper_harder@hotmail.com>

	* make.bat: Makes it possible to generate the Info files on
	windows again.

2000-10-11  Katsumi Yamaoka <yamaoka@jpl.org>

	* Makefile.in (info-ja, xinfo-ja): No need to use `MAKEINFO=no'.
	(install-info-ja, install-info, install-lisp, install-ja): New
	targets (possibly for FSF Emacsen).

	* texi/Makefile.in (install-ja-info, install-info, install-ja,
	%-ja.info, %-ja): New targets.

	* texi/message-ja.texi (direntry): Replace "message" with
	"message-ja".

2000-10-08  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-type-definition): Fix regular
	expression to extract article body from `ZDNet'.

2000-10-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/imap.el: Require `base64' instead of to autoload it.

2000-10-05  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-xmas.el (gnus-xmas-group-startup-message): Don't use
	`gnus-point-at-eol'.
	* lisp/gnus.el (gnus-group-startup-message): Ditto.

	* lisp/gnus-ems.el (gnus-ems-redefine): Revive annulling of
	`gnus-summary-set-display-table'.

2000-10-04  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* lisp/gnus-sum.el (gnus-build-sparse-threads): Use
	`make-full-mail-header-from-decoded-header' instead of