@@ -1,3 +1,9 @@
+2000-10-31  Katsumi Yamaoka <yamaoka@jpl.org>
+
+	* lisp/gnus-sum.el (gnus-summary-insert-line): Work with quoted
+	double-quote charcters.
+	(gnus-summary-prepare-threads): Ditto.
+
 2000-10-30  TAKAHASHI Kaoru  <kaoru@kaisei.org>
 
 	* lisp/ptexinfmt.el (ptexinfmt-disable-broken-notice-flag): Renamed
